--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,30 @@
 
                          JGoodies Looks
+                          Version 2.1.3
+                          Release Notes
+                        
+
+INTRODUCTION
+
+    This maintenance update ...
+    
+
+BUGS FIXED
+
+    #166: NPE if PlasticXP checkbox or radio text is null
+
+
+OTHER CHANGES
+
+    ...
+    
+    
+---------------------------------------------------------------------------
+Find below the change history for older releases.
+
+
+
+                         JGoodies Looks
                           Version 2.1.2
                           Release Notes
                         
