--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -16,7 +16,8 @@ BUGS FIXED
 
 OTHER CHANGES
 
-    ...
+    o Added the ability to add a null replacement for a given
+      l&f class name. See Options#initializeDefaultReplacements
     
     
 ---------------------------------------------------------------------------
