Updated the Forms library version from 1.2.0 to 1.2.1

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -40,6 +40,7 @@ OTHER CHANGES
 
     o JGoodies WindowsLookAndFeel#getID now returns "Windows"
       where it returned "JGoodies Windows" before.
+    o Updated to the Forms 1.2.1.
     o Minor source code improvements.
 
 ---------------------------------------------------------------------------
