--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -6,7 +6,7 @@
 
 INTRODUCTION
 
-    This maintenance update fixes a minor issues with read-only text.
+    This maintenance update fixes minor issues with read-only text.
     
 
 BUG FIXES
