--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,5 +1,25 @@
 
                          JGoodies Looks
+                          Version 2.2.2
+                          Release Notes
+                        
+
+INTRODUCTION
+
+    This update fixes a minor issues on Vista with Java 5.
+    
+
+BUG FIXES
+
+    o Poor menu selection foreground on Vista with Java 5.
+      
+      
+---------------------------------------------------------------------------
+Find below the change history for older releases.
+
+
+
+                         JGoodies Looks
                           Version 2.2.1
                           Release Notes
                         
