--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -13,7 +13,7 @@ INTRODUCTION
 
 OTHER CHANGES
 
-    o ...
+    o Fixed bug in the FontTest on non-Windows platforms.
     
 ---------------------------------------------------------------------------
 
