--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -25,6 +25,7 @@ OTHER CHANGES
       The blue question mark icon is for help messages and help windows.  
     o Removed obsolete #isBlank implementation.
     o Removed code used for Java 1.4 that is now obsolete.
+    o Updated HTML docs.
     
 ---------------------------------------------------------------------------
 
