--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -7,6 +7,11 @@ CHANGES IN 2.5.3 --------------------------------------------------------
 
     o Compiled against the JGoodies Common 1.5.
     o Source code cleanup.
+    o Fixed and extended the pom.xml:
+      - added schema
+      - fixed scope for dependencies
+      - added Maven Central deployer
+      - added build data
 
 
 CHANGES IN 2.5.2 --------------------------------------------------------
