Removed obsolete code

--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -5,6 +5,7 @@
 
 CHANGES IN 2.6.1 --------------------------------------------------------
 
+    o Removed obsolete code.
     o Suppressed compiler warnings. 
 
 
