--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -8,6 +8,8 @@ CHANGES IN 2.8.0 --------------------------------------------------------
     o Moved to Java 7.
     o Requires the JGoodies Common 1.9.
     o Turned BorderStyle and HeaderStyle into enumerations.
+    o Added generics.
+    o Removed code for Windows 95/98/ME/2000.
 
 
 CHANGES IN 2.7.0 --------------------------------------------------------
